<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Prioritize">

    <TextView
        android:id="@+id/DescriptionPrioritize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/prioritize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        android:text="@string/back"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next2" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/back2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/number1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/rank_1st"
                android:visibility="visible" />

            <Button
                android:id="@+id/number2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/rank_2nd"
                android:visibility="visible" />

            <Button
                android:id="@+id/number3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/rank_3rd"
                android:visibility="visible" />

            <Button
                android:id="@+id/number4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/rank_4th"
                android:visibility="visible" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/next2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/next"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/prioritizeButton14"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="99dp" />

    <ImageButton
        android:id="@+id/prioritizeButton13"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="99dp" />

    <ImageButton
        android:id="@+id/prioritizeButton12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="99dp" />

    <ImageButton
        android:id="@+id/prioritizeButton11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="99dp" />

    <ImageButton
        android:id="@+id/prioritizeButton21"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="173dp" />

    <ImageButton
        android:id="@+id/prioritizeButton22"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="173dp" />

    <ImageButton
        android:id="@+id/prioritizeButton23"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="173dp" />

    <ImageButton
        android:id="@+id/prioritizeButton24"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="173dp" />

    <ImageButton
        android:id="@+id/prioritizeButton31"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="249dp" />

    <ImageButton
        android:id="@+id/prioritizeButton32"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="249dp" />

    <ImageButton
        android:id="@+id/prioritizeButton33"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="249dp" />

    <ImageButton
        android:id="@+id/prioritizeButton34"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="249dp" />

    <ImageButton
        android:id="@+id/prioritizeButton41"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageButton
        android:id="@+id/prioritizeButton42"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageButton
        android:id="@+id/prioritizeButton43"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageButton
        android:id="@+id/prioritizeButton44"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="323dp" />

    <ImageButton
        android:id="@+id/prioritizeButton51"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="396dp" />

    <ImageButton
        android:id="@+id/prioritizeButton52"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="396dp" />

    <ImageButton
        android:id="@+id/prioritizeButton53"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="396dp" />

    <ImageButton
        android:id="@+id/prioritizeButton54"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="396dp" />

    <ImageButton
        android:id="@+id/prioritizeButton61"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="471dp" />

    <ImageButton
        android:id="@+id/prioritizeButton62"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="471dp" />

    <ImageButton
        android:id="@+id/prioritizeButton63"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="471dp" />

    <ImageButton
        android:id="@+id/prioritizeButton64"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/prioritize"
        android:visibility="visible"
        app:srcCompat="@drawable/gray_square"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="471dp" />

</androidx.constraintlayout.widget.ConstraintLayout>